--- a/views/doctorProfile.ejs
+++ b/views/doctorProfile.ejs
@@ -33,7 +33,7 @@
     <p><strong>Email:</strong> <%= doctor.email %></p>
     <p><strong>Title:</strong> <%= doctor.title %></p>
     <p><strong>Speciality:</strong> <%= doctor.speciality.join(', ') %></p>
-    <p><strong>Location:</strong> <%= doctor.city %>, <%= doctor.state %>, <%= doctor.country %></p>
+    <p><strong>Location:</strong> <%= doctor.city %>, <%= doctor.state %>, <%= doctor.country %>,  <%= doctor.zip %></p>
     <p><strong>Gender:</strong> <%= doctor.gender %></p>
     <p><strong>Date of Birth:</strong> <%= doctor.dateOfBirth ? new Date(doctor.dateOfBirth).toLocaleDateString() : 'N/A' %></p>
     <p><strong>Age:</strong> <%= doctor.dateOfBirth ? Math.floor((new Date() - new Date(doctor.dateOfBirth)) / (365.25 * 24 * 60 * 60 * 1000)) : 'N/A' %></p>
@@ -142,14 +142,18 @@
 
     <h3>FAQs</h3>
     <% if (doctor.faqs && doctor.faqs.length > 0) { %>
-    <ul>
-        <% doctor.faqs.forEach(faq => { %>
-        <li><%= faq %></li>
-        <% }) %>
-    </ul>
+        <ul>
+            <% doctor.faqs.forEach(faq => { %>
+                <li>
+                    <strong>Q: <%= faq.question %></strong><br>
+                    <em>A: <%= faq.answer %></em>
+                </li>
+            <% }) %>
+        </ul>
     <% } else { %>
-    <p>No FAQs listed.</p>
+        <p>No FAQs listed.</p>
     <% } %>
+    
 
     <h3>Time Slots</h3>
     <ul>
