Updated Dr side profile and Blogs

--- a/views/doctorProfile.ejs
+++ b/views/doctorProfile.ejs
@@ -40,6 +40,7 @@
     <% if (doctor.bloodGroup) { %>
     <p><strong>Blood Group:</strong> <%= doctor.bloodGroup %></p>
     <% } %>
+    <p><strong>Experience:</strong> <%= doctor.experience %></p>
     <p><strong>Website:</strong> <a href="<%= doctor.website %>" target="_blank"><%= doctor.website %></a></p>
     <p><strong>Consultation:</strong> <%= doctor.consultation %></p>
     <p><strong>Rating:</strong> <%= doctor.rating %></p>
