--- a/views/editDoctorProfile.ejs
+++ b/views/editDoctorProfile.ejs
@@ -408,6 +408,10 @@ function addFAQ() {
       <input type="date" name="dateOfBirth" value="<%= doctor.dateOfBirth ? doctor.dateOfBirth.toISOString().split('T')[0] : '' %>" required>
     </div>
     <div>
+      <label for="experience">Years of Experience:</label>
+      <input type="number" id="experience" name="experience" min="0" value="<%= doctor.experience %>" required>
+    </div>
+    <div>
       <label>Blood Group:</label>
       <select name="bloodGroup">
         <option value="">Select Blood Group</option>
